2004-08-02 Gareth Jones <gareth_jones@users.berlios.de>

	* src/libprometheus.bash.in (add_profile): Fixed bug & added
	  $package_list.

	* src/libprometheus.bash.in: log_echo & log_warning now always output to
	  the terminal as well as any log.

	* src/pkgadd.in: Skeleton written.

2004-08-01 Gareth Jones <gareth_jones@users.berlios.de>

	* man/pkgunpack.1.in: Written.

	* man/prometheus.conf.5.in: Ammended for new logging options.

	* src/pkgbuild.in: Written.
	* man/pkgbuild.1.in: Written.

	* src/libprometheus.bash.in: Added log_echo & log_warning.

	* src/pkgcheck.in: Written.
	* man/pkgcheck.1.in: Written.

	* src/libprometheus.bash.in (choice): Added.

	* src/libprometheus.bash.in: Move setting $name from open_package to
	  source_profile.  Added $name_ver & get_installed_version.
	* src/pkgcheck.in: $name => $name_ver.
	* src/pkgbuild.in: $name => $name_ver.

	* Makefile.defs: Added INSTALL_LOG_RC parameter.
	* etc/Makefile: Added %INSTALL_LOG_RC% substitution for
	  prometheus.conf.in.
	* etc/prometheus.conf.in: Added install_log_rc parameter.
	* man/prometheus.conf.5.in: Documented install_log_rc parameter.
	* src/libprometheus.bash.in (source_config): Added setting $logdir,
	  $version_table & $timestamp.

	* src/pkginstall.in: Written.
	* man/pkginstall.8.in: Written.

2004-07-31 Gareth Jones <gareth_jones@users.berlios.de>

	* src/libprometheus.bash.in (log): Much simplified, nicer output.

	* src/libprometheus.bash.in (pipestat): Added.
	* src/pkgunpack.in (apply_patches): Added call to pipestat after
	  `cat | patch' command.

	* src/libprometheus.bash.in (setup_logging): Reverted to piping to tee
	  instead of using process substitution, which is no longer needed.
	* src/libprometheus.bash.in (log): Added call to pipestat.

	* src/libprometheus.bash.in (logged_failure): Added.
	* src/libprometheus.bash.in (log): Added call to logged_failure.

2004-07-30 Gareth Jones <gareth_jones@users.berlios.de>
